Changes for REDIPS.drag library

4.2.1
- fixed BUG when row was dropped to the last row position in table
- added redips_dragrow_id property to the cloned row (needed for dropped row identification)

4.2.0
- added animation functionality
- move_object() is renamed to relocate()
- move_object() has new meaning - move (animate) objects to specified table positions
- added animation() method
- added get_position method
- added public properties animation_pause and animation_step
- added example17
- modified example12

4.1.1
- fixed bug: in case of multiple dragging containers and enabling/disabling DIV element redips_container property was changed (and that was wrong)
  (added "if" case in enable_drag() method)

4.1.0
- added unlimit nest table support
- modification in init_tables() and table_top()
- modified example13

4.0.5
- fixed bug: in a moment of moving (big) DIV element at page bottom, element jumped to the top instead of staying at the page bottom

4.0.4
- getScrollPosition() and get_style() methods exposed as public methods

4.0.3
- added public myhandler_dropped_before() event handler
    * handler is similar to the myhandler_dropped()
    * myhandler_dropped_before() is called before element is dropped
    * myhandler_dropped() is called after element is dropped
    
4.0.2
- added public myhandler_dblclicked() event handler
    ondblclick event is attached to the DIV object
- changing styles in example13
- fixing example03 (attached ondblclick event to the cloned objects)
- removed target_cell.appendChild(obj) line in case when DIV element was not moved
    click&release mouse button will not place element to the bottom (if table cell contains more than one element)

4.0.0
- added support for drag and drop table rows
- added example15 to show drag rows functionality
- private method set_color() renamed to set_position()
- created private method set_bgcolor() - accepts color as array
- created private method get_bgcolor() - returns color as array